[gd_scene load_steps=30 format=3 uid="uid://d0bgk8cx2mpww"]

[ext_resource type="Texture2D" uid="uid://c8gwujf37pnp6" path="res://Images/Background/BackgroundTitleScreen.jpg" id="1_cho8v"]
[ext_resource type="Script" path="res://main.gd" id="1_hfvr8"]
[ext_resource type="FontFile" uid="uid://donh1sk3xa4tp" path="res://Fonts/BlockHead_fat.ttf" id="2_jk13d"]
[ext_resource type="FontFile" uid="uid://brfmxipy4vkof" path="res://Fonts/BlockHead.ttf" id="3_es2oj"]
[ext_resource type="Texture2D" uid="uid://cvtnwlwm5ci24" path="res://Images/tic-tac-toe.png" id="4_u7smk"]
[ext_resource type="Texture2D" uid="uid://bud7orfqpxx1c" path="res://Images/retour.png" id="6_36wxc"]
[ext_resource type="FontFile" uid="uid://dpd2jqvbng65h" path="res://Fonts/BlockHead_bold.ttf" id="7_eas32"]
[ext_resource type="Texture2D" uid="uid://c6pmfhkiqvjrc" path="res://Images/retry.png" id="8_rqst5"]
[ext_resource type="Texture2D" uid="uid://ccinstgdtef6v" path="res://Images/DiceGame/Dice5.png" id="9_5fgof"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iee08"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p27e1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gx5xh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dq461"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cudvc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q1xu1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rd1kv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q0awg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xj4r1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yqadh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o7vhl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ka6kh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h6mf0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vtdmk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2qeef"]

[sub_resource type="Curve" id="Curve_3pfwe"]
max_value = 100.0
_data = [Vector2(0.0152542, 4.66904), 0.0, 0.0, 0, 0, Vector2(0.967797, 5.20461), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xahwp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jjr3q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ak32e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0ybvg"]

[node name="Main" type="Node2D"]
script = ExtResource("1_hfvr8")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TitleScreen" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 1080.0
offset_bottom = 1920.0

[node name="Background" type="TextureRect" parent="CanvasLayer/TitleScreen"]
layout_mode = 0
offset_right = 1080.0
offset_bottom = 1920.0
texture = ExtResource("1_cho8v")

[node name="Title" type="Label" parent="CanvasLayer/TitleScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -481.0
offset_top = 66.0
offset_right = 481.0
offset_bottom = 266.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_jk13d")
theme_override_font_sizes/font_size = 200
text = "2 Player Games"

[node name="SelectGameBtn" type="Button" parent="CanvasLayer/TitleScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -292.0
offset_top = -72.0
offset_right = 303.0
offset_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_es2oj")
theme_override_font_sizes/font_size = 150
theme_override_styles/pressed = SubResource("StyleBoxEmpty_iee08")
theme_override_styles/focus = SubResource("StyleBoxEmpty_p27e1")
text = "Select Game"
flat = true

[node name="OptionBtn" type="Button" parent="CanvasLayer/TitleScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -292.0
offset_top = 211.0
offset_right = 303.0
offset_bottom = 370.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_es2oj")
theme_override_font_sizes/font_size = 150
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gx5xh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_dq461")
text = "Option"
flat = true

[node name="Credits" type="Label" parent="CanvasLayer/TitleScreen"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -74.0
offset_right = 230.0
offset_bottom = -23.0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_es2oj")
theme_override_font_sizes/font_size = 50
text = "by squach90"

[node name="OptionScreen" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -540.0
offset_top = -960.0
offset_right = 540.0
offset_bottom = 960.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="CanvasLayer/OptionScreen"]
layout_mode = 0
offset_right = 1080.0
offset_bottom = 1920.0
texture = ExtResource("1_cho8v")

[node name="ReturnOption" type="Button" parent="CanvasLayer/OptionScreen"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -152.0
offset_right = 336.0
offset_bottom = -8.0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_es2oj")
theme_override_font_sizes/font_size = 75
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cudvc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_q1xu1")
text = " Retour"
icon = ExtResource("6_36wxc")
flat = true
expand_icon = true

[node name="Title" type="Label" parent="CanvasLayer/OptionScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -292.0
offset_top = 66.0
offset_right = 302.0
offset_bottom = 366.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("7_eas32")
theme_override_font_sizes/font_size = 300
text = "Option"

[node name="MenuScreen" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1080.0
offset_bottom = 1920.0

[node name="Background" type="TextureRect" parent="CanvasLayer/MenuScreen"]
layout_mode = 0
offset_right = 1080.0
offset_bottom = 1920.0
texture = ExtResource("1_cho8v")

[node name="Morpion" type="Button" parent="CanvasLayer/MenuScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -481.0
offset_top = -752.0
offset_right = -192.0
offset_bottom = -464.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/pressed = SubResource("StyleBoxEmpty_rd1kv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_q0awg")
icon = ExtResource("4_u7smk")
flat = true
expand_icon = true

[node name="Return" type="Button" parent="CanvasLayer/MenuScreen"]
layout_mode = 0
offset_left = 40.0
offset_top = 1776.0
offset_right = 358.0
offset_bottom = 1897.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_es2oj")
theme_override_font_sizes/font_size = 75
theme_override_styles/pressed = SubResource("StyleBoxEmpty_xj4r1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yqadh")
text = " Retour"
icon = ExtResource("6_36wxc")
flat = true
expand_icon = true

[node name="DiceGame" type="Button" parent="CanvasLayer/MenuScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -140.0
offset_top = 208.0
offset_right = 149.0
offset_bottom = 496.0
grow_horizontal = 2
theme_override_styles/pressed = SubResource("StyleBoxEmpty_o7vhl")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ka6kh")
icon = ExtResource("9_5fgof")
expand_icon = true

[node name="Morpion" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1080.0
offset_bottom = 1920.0

[node name="Background" type="TextureRect" parent="CanvasLayer/Morpion"]
layout_mode = 0
offset_right = 1080.0
offset_bottom = 1920.0
texture = ExtResource("1_cho8v")

[node name="Title" type="Label" parent="CanvasLayer/Morpion"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -382.0
offset_top = 159.0
offset_right = 385.0
offset_bottom = 459.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_jk13d")
theme_override_font_sizes/font_size = 300
text = "Morpion"

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Morpion"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -395.0
offset_top = -395.0
offset_right = 395.0
offset_bottom = 395.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 270
theme_override_constants/v_separation = 270
columns = 3

[node name="1" type="Panel" parent="CanvasLayer/Morpion/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_h6mf0")

[node name="Btn1" type="Button" parent="CanvasLayer/Morpion/GridContainer/1"]
layout_mode = 1
offset_right = 250.0
offset_bottom = 250.0
text = "jijojojo"
expand_icon = true

[node name="2" type="Panel" parent="CanvasLayer/Morpion/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_h6mf0")

[node name="Btn2" type="Button" parent="CanvasLayer/Morpion/GridContainer/2"]
layout_mode = 1
offset_right = 250.0
offset_bottom = 250.0
text = "jijojojo"
expand_icon = true

[node name="3" type="Panel" parent="CanvasLayer/Morpion/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_h6mf0")

[node name="Btn3" type="Button" parent="CanvasLayer/Morpion/GridContainer/3"]
layout_mode = 1
offset_right = 250.0
offset_bottom = 250.0
text = "jijojojo"
expand_icon = true

[node name="4" type="Panel" parent="CanvasLayer/Morpion/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_h6mf0")

[node name="Btn4" type="Button" parent="CanvasLayer/Morpion/GridContainer/4"]
layout_mode = 1
offset_right = 250.0
offset_bottom = 250.0
text = "jijojojo"
expand_icon = true

[node name="5" type="Panel" parent="CanvasLayer/Morpion/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_h6mf0")

[node name="Btn5" type="Button" parent="CanvasLayer/Morpion/GridContainer/5"]
layout_mode = 1
offset_right = 250.0
offset_bottom = 250.0
text = "jijojojo"
expand_icon = true

[node name="6" type="Panel" parent="CanvasLayer/Morpion/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_h6mf0")

[node name="Btn6" type="Button" parent="CanvasLayer/Morpion/GridContainer/6"]
layout_mode = 1
offset_right = 250.0
offset_bottom = 250.0
text = "jijojojo"
expand_icon = true

[node name="7" type="Panel" parent="CanvasLayer/Morpion/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_h6mf0")

[node name="Btn7" type="Button" parent="CanvasLayer/Morpion/GridContainer/7"]
layout_mode = 1
offset_right = 250.0
offset_bottom = 250.0
text = "jijojojo"
expand_icon = true

[node name="8" type="Panel" parent="CanvasLayer/Morpion/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_h6mf0")

[node name="Btn8" type="Button" parent="CanvasLayer/Morpion/GridContainer/8"]
layout_mode = 1
offset_right = 250.0
offset_bottom = 250.0
text = "jijojojo"
expand_icon = true

[node name="9" type="Panel" parent="CanvasLayer/Morpion/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_h6mf0")

[node name="Btn9" type="Button" parent="CanvasLayer/Morpion/GridContainer/9"]
layout_mode = 1
offset_right = 250.0
offset_bottom = 250.0
text = "jijojojo"
expand_icon = true

[node name="RedWinText" type="Label" parent="CanvasLayer/Morpion"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.788235, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_eas32")
theme_override_font_sizes/font_size = 200
text = "Red Win"

[node name="BlueWinText" type="Label" parent="CanvasLayer/Morpion"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0.352941, 0.831373, 1)
theme_override_fonts/font = ExtResource("7_eas32")
theme_override_font_sizes/font_size = 200
text = "Blue Win"

[node name="RetryBtnMorpion" type="Button" parent="CanvasLayer/Morpion"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = 100.0
offset_right = 106.0
offset_bottom = 308.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_es2oj")
theme_override_font_sizes/font_size = 100
text = "Retry"
icon = ExtResource("8_rqst5")
flat = true
icon_alignment = 1
vertical_icon_alignment = 2
expand_icon = true

[node name="ReturnMorpion" type="Button" parent="CanvasLayer/Morpion"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -144.0
offset_right = 388.0
offset_bottom = -18.0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_es2oj")
theme_override_font_sizes/font_size = 75
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vtdmk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_2qeef")
text = "Retour"
icon = ExtResource("6_36wxc")
flat = true
expand_icon = true

[node name="CIAN" type="CPUParticles2D" parent="CanvasLayer/Morpion"]
position = Vector2(1080, 1485)
rotation = -0.66946
emitting = false
amount = 100
one_shot = true
explosiveness = 0.6
randomness = 0.5
local_coords = true
direction = Vector2(0, -1)
gravity = Vector2(0, 100)
initial_velocity_max = 1000.0
angular_velocity_min = 280.0
angular_velocity_max = 280.0
linear_accel_min = 10.0
linear_accel_max = 10.0
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_3pfwe")
color = Color(0, 0.784314, 0.784314, 1)

[node name="RED" type="CPUParticles2D" parent="CanvasLayer/Morpion"]
position = Vector2(0, 1464)
rotation = 0.745865
emitting = false
amount = 100
one_shot = true
explosiveness = 0.6
randomness = 0.5
local_coords = true
direction = Vector2(0, -1)
gravity = Vector2(0, 100)
initial_velocity_max = 1000.0
angular_velocity_min = 280.0
angular_velocity_max = 280.0
linear_accel_min = 10.0
linear_accel_max = 10.0
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_3pfwe")
color = Color(1, 0, 0.188235, 1)

[node name="Dice" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1080.0
offset_bottom = 1920.0

[node name="Background" type="TextureRect" parent="CanvasLayer/Dice"]
layout_mode = 0
offset_right = 1080.0
offset_bottom = 1920.0
texture = ExtResource("1_cho8v")

[node name="Title" type="Label" parent="CanvasLayer/Dice"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -481.0
offset_top = 159.0
offset_right = 478.0
offset_bottom = 459.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_jk13d")
theme_override_font_sizes/font_size = 300
text = "Dice Game"

[node name="DiceValueIMG" type="TextureRect" parent="CanvasLayer/Dice"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.5
offset_top = -203.5
offset_right = 204.5
offset_bottom = 203.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_5fgof")

[node name="ReLaunchDiceBtn" type="Button" parent="CanvasLayer/Dice"]
layout_mode = 0
offset_left = 334.0
offset_top = 1330.0
offset_right = 756.0
offset_bottom = 1640.0
theme_override_fonts/font = ExtResource("3_es2oj")
theme_override_font_sizes/font_size = 150
theme_override_styles/pressed = SubResource("StyleBoxEmpty_xahwp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jjr3q")
text = "Relancer"
icon = ExtResource("8_rqst5")
flat = true
icon_alignment = 1
vertical_icon_alignment = 2
expand_icon = true

[node name="Score" type="Label" parent="CanvasLayer/Dice"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -257.0
offset_top = -464.0
offset_right = 282.0
offset_bottom = -264.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_es2oj")
theme_override_font_sizes/font_size = 200
text = "Score : 0"

[node name="ReturnDiceBtn" type="Button" parent="CanvasLayer/Dice"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -144.0
offset_right = 388.0
offset_bottom = -18.0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_es2oj")
theme_override_font_sizes/font_size = 75
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ak32e")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0ybvg")
text = "Return"
icon = ExtResource("6_36wxc")
flat = true
expand_icon = true

[connection signal="pressed" from="CanvasLayer/TitleScreen/SelectGameBtn" to="." method="_on_select_game_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/TitleScreen/OptionBtn" to="." method="_on_option_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/OptionScreen/ReturnOption" to="." method="_on_return_option_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuScreen/Morpion" to="." method="_on_morpion_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuScreen/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuScreen/DiceGame" to="." method="_on_dice_game_pressed"]
[connection signal="pressed" from="CanvasLayer/Morpion/GridContainer/1/Btn1" to="." method="_on_btn_1_pressed"]
[connection signal="pressed" from="CanvasLayer/Morpion/GridContainer/2/Btn2" to="." method="_on_btn_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Morpion/GridContainer/3/Btn3" to="." method="_on_btn_3_pressed"]
[connection signal="pressed" from="CanvasLayer/Morpion/GridContainer/4/Btn4" to="." method="_on_btn_4_pressed"]
[connection signal="pressed" from="CanvasLayer/Morpion/GridContainer/5/Btn5" to="." method="_on_btn_5_pressed"]
[connection signal="pressed" from="CanvasLayer/Morpion/GridContainer/6/Btn6" to="." method="_on_btn_6_pressed"]
[connection signal="pressed" from="CanvasLayer/Morpion/GridContainer/7/Btn7" to="." method="_on_btn_7_pressed"]
[connection signal="pressed" from="CanvasLayer/Morpion/GridContainer/8/Btn8" to="." method="_on_btn_8_pressed"]
[connection signal="pressed" from="CanvasLayer/Morpion/GridContainer/9/Btn9" to="." method="_on_btn_9_pressed"]
[connection signal="pressed" from="CanvasLayer/Morpion/RetryBtnMorpion" to="." method="_on_retry_btn_morpion_pressed"]
[connection signal="pressed" from="CanvasLayer/Morpion/ReturnMorpion" to="." method="_on_return_morpion_pressed"]
[connection signal="pressed" from="CanvasLayer/Dice/ReLaunchDiceBtn" to="." method="_on_re_launch_dice_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Dice/ReturnDiceBtn" to="." method="_on_return_dice_btn_pressed"]
